// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component  should match the snapshot 1`] = `
<div
  className="FieldGroup-sc-1ksesv8-0 Input__InputFieldGroup-sc-1mls2zy-3 MYeBt"
>
  <input
    className="Input__InputTag-sc-1mls2zy-1 bVAJiU"
    defaultValue="foo"
    id=""
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  
  
</div>
`;

exports[`Input component  with a label should match the snapshot 1`] = `
<div
  className="FieldGroup-sc-1ksesv8-0 Input__InputFieldGroup-sc-1mls2zy-3 MYeBt"
>
  <input
    className="Input__InputTag-sc-1mls2zy-1 bVAJiU"
    defaultValue="foo"
    id="input-with-label"
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  <label
    className="Label-inke2y-0 Input__InputLabel-sc-1mls2zy-0 gMAGUR"
    htmlFor="input-with-label"
  >
    Text label
  </label>
  
</div>
`;

exports[`Input component  with an error message should match the snapshot 1`] = `
<div
  className="FieldGroup-sc-1ksesv8-0 Input__InputFieldGroup-sc-1mls2zy-3 MYeBt"
>
  <input
    className="Input__InputTag-sc-1mls2zy-1 bVAJiU"
    defaultValue="foo"
    id=""
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  
  <div
    className="ErrorMessage-o8xm0w-0 cMosjL"
  >
    Error message
  </div>
</div>
`;
